<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="@dimen/x400"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/x100"
        android:layout_marginRight="@dimen/x100"
        android:layout_marginTop="@dimen/y20">

        <TextView
            android:id="@+id/text_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right"
            android:text="2017" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/year" />

        <TextView
            android:id="@+id/text_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="4" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/mouth" />

        <TextView
            android:id="@+id/text_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day" />

    </LinearLayout>


    <lecho.lib.hellocharts.view.ColumnChartView
        android:id="@+id/columnchart"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/y580"
        android:layout_margin="@dimen/x20">

    </lecho.lib.hellocharts.view.ColumnChartView>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y14"
        android:background="#F5F5F5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x20"
        android:layout_marginRight="@dimen/x20"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y90"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/duration"
                android:textColor="#000" />

            <TextView
                android:id="@+id/text_char_alltime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:text="00:00:00"
                android:textColor="#000" />

        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#F5F5F5" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y90"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/calorie"
                android:textColor="#000" />

            <TextView
                android:id="@+id/text_chart_calorie"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:text="0.0  千卡"
                android:textColor="#000" />

        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#F5F5F5" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y90"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/avgvector"
                android:textColor="#000" />

            <TextView
                android:id="@+id/text_chart_vector"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:text="0.00  /公里"
                android:textColor="#000" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y90"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/distance"
                android:textColor="#000" />

            <TextView
                android:id="@+id/text_chart_distance"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:text="0 km"
                android:textColor="#000" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#F5F5F5" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#F5F5F5" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F5F5F5" />

</LinearLayout>
