<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.amap.api.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/amap"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </com.amap.api.maps.MapView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y260"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/x20"
        android:background="@drawable/shape_layout_back"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="@dimen/x300"
            android:layout_height="@dimen/y110"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/text_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/distance"
                android:textSize="42sp" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#546464" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_alltime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="00:00:00"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_vector"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0'0''"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_calorie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/duration" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/avgvector" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/calorie" />

        </LinearLayout>


    </LinearLayout>


</FrameLayout>