<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#47ae88"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:id="@+id/util"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/x20"
        android:orientation="horizontal">

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/x20"
        android:layout_marginTop="@dimen/y200"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/text_distance"
            android:layout_width="@dimen/x200"
            android:layout_height="@dimen/x200"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center|top"
            android:background="@drawable/shape_cricle_button"
            android:gravity="center"
            android:padding="@dimen/x3"
            android:text="@string/mileage"
            android:textColor="#faf8f8"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_distance">

            <TextView
                android:id="@+id/text_time"
                android:layout_width="@dimen/x200"
                android:layout_height="@dimen/x200"
                android:layout_alignParentLeft="true"
                android:background="@drawable/shape_cricle_button"
                android:gravity="center"
                android:text="@string/time"
                android:textColor="#fefcfc"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_vector"
                android:layout_width="@dimen/x200"
                android:layout_height="@dimen/x200"
                android:layout_alignParentRight="true"
                android:background="@drawable/shape_cricle_button"
                android:gravity="center"
                android:padding="@dimen/x5"
                android:text="@string/speed"
                android:textColor="#fefcfc"
                android:textSize="20sp" />


        </RelativeLayout>

    </RelativeLayout>


</RelativeLayout>